# school-chat

./: README.md
Client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
NetworkCommon/: CMakeLists.txt
NetworkCommon/include/NetworkCommon/: Deserializer.h  Packets.h  Reader.h  Serializer.h  Writer.h
NetworkCommon/src/: Deserializer.cpp  Reader.cpp  Serializer.cpp  Writer.cpp
Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
Server/Sessions/: AdminSession.h  BaseSession.cpp  BaseSession.h
